Fix various errors and typos